# pers_databricks

./: .gitignore  .pre-commit-config.yaml  README.md  databricks.yml  pyproject.toml
.github/workflows/: check.yml  pre-commit.yml
jobs/: run_sample_pipeline.py  run_silver_mock.py  run_silver_mock_backfill.py  set_default_warehouse.py
notebooks/: 0_example_notebook_databricks_connect.ipynb  silver_mock_notebook.py
pers_databricks/: main.py
pers_databricks/cli/: run_gold.py  run_silver_backfill.py  run_silver_mock.py
pers_databricks/pipelines/gold/: __init__.py  gold.py
pers_databricks/pipelines/silver/: sample_pipeline.py  silver_mock.py
pers_databricks/typings/: __builtins__.pyi
pers_databricks/utils/: spark.py
tests/: test_pre_commit_hooks.py  test_sanity_check.py
