[project]
name = "pers-databricks"
version = "2026.0.0"
description = ""
authors = [{ name = "Datacation", email = "info@datacation.nl" }]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "databricks-connect",
    "databricks-sql-connector",
    "python-dotenv",
    "polars",
    "pyarrow",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pers_databricks"]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.mypy]
python_version = "3.14"
strict = true
exclude = [
    "pers_databricks/typings",
    "notebooks"
]
