[project]
name = "pers-databricks"
version = "2026.0.0"
description = ""
authors = [{ name = "Datacation", email = "info@datacation.nl" }]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "databricks-connect>=18.2.1",
    "databricks-sql-connector>=4.2.6",
    "python-dotenv",
    "polars",
    "pyarrow",
    "typer",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pers_databricks"]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.mypy]
python_version = "3.14"
strict = true
exclude = [
    "pers_databricks/typings",
    "notebooks"
]

[project.scripts]
run-silver-mock = "pers_databricks.cli.run_silver_mock:app"
